infra/ingress-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-lb
  namespace: ingress
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 443
      name: https
  selector:
    app: nginx-ingress-microk8s-controller
